# alphalens-reloaded

./: .gitignore  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_wheels.yml  conda_package.yml  distribution.yml  test_wheels.yml  unit_tests.yml
alphalens/: _version.py  performance.py  plotting.py  tears.py  utils.py
alphalens/examples/: daily_factor_synthetic_data.ipynb  event_study.ipynb  event_study_synthetic_data.ipynb  intraday_factor.ipynb  predictive_vs_non-predictive_factor.ipynb  pyfolio_integration.ipynb
alphalens/tests/: test_performance.py  test_tears.py  test_utils.py
conda/recipe/: meta.yaml
docs/source/: conf.py  index.rst
docs/source/notebooks/: event_study.ipynb  intraday_factor.ipynb  pyfolio_integration.ipynb
src/alphalens/: plotting.py  utils.py
src/alphalens/examples/: event_study.ipynb  intraday_factor.ipynb  pyfolio_integration.ipynb
tests/: test_performance.py  test_tears.py  test_utils.py
