[metadata]
name = alphalens
url = https://alphalens.ml4trading.io
description = Performance analysis of predictive (alpha) stock factors'
long_description = file: README.md
license = Apache 2.0
license_file = LICENSE
maintainer = Applied AI, LLC
maintainer email = stefan@applied-ai.com
author = Quantopian Inc
author email = opensource@quantopian.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python
    Topic :: Utilities
    Topic :: Office/Business :: Financial
    Topic :: Scientific/Engineering :: Information Analysis


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = alphalens/_version.py
versionfile_build = alphalens/_version.py
tag_prefix = v
parentdir_prefix = alphalens-


[nosetests]
verbosity = 2
with-ignore-docstrings = 1
with-timer = 1
timer-top-n = 15
with-coverage = 1
cover-package = alphalens.tests
with-doctest = 1
logging-level = INFO


[options]
python_requires = >=3.7
include_package_data = True
install_requires =
    matplotlib>=1.4.0
    numpy>=1.9.1
    pandas>=0.18.0
    scipy>=0.14.0
    seaborn>=0.6.0
    statsmodels>=0.6.1
    IPython>=3.2.3
    empyrical>=0.5.0

[options.extras_require]
test =
    tox>=2.3.1
    coverage>=4.0.3
    nose>=1.3.7
    parameterized>=0.6.1
    nose-ignore-docstring>=0.2
    nose-timer>=0.5.0
    flake8>=3.9.1
    black

dev =
    flake8==3.9.1
    black>=20.8
    pre-commit>=2.12.1

docs =
    Cython
    Sphinx>=1.3.2
    numpydoc>=0.5.0
    sphinx-autobuild>=0.6.0
    pydata-sphinx-theme
